hero content & style added

--- a/code/index.html
+++ b/code/index.html
@@ -21,6 +21,7 @@
         <a href="#">Travel</a>
         <a href="#">Style</a>
         <a href="#">Entertainment</a>
+        <a href="#">Worldwide</a>
         <a href="#">Search</a>
         <a href="#">Archive</a>
       </div>
@@ -52,6 +53,9 @@
           <li>
             <a href="#">Entertainment</a>
           </li>
+          <li>
+            <a href="#">Worldwide</a>
+          </li>
         </ul>
         <a href="#">Search</a>
       </nav>
@@ -59,10 +63,34 @@
 
     <section id="hero">
       <!-- Featured articles -->
-      <article class="large">Large</article>
-      <article class="medium">Medium</article>
-      <article class="small-1">Small-1</article>
-      <article class="small-2">Small-2</article>
+      <article class="large">
+        <a class="article-image" href="#"></a>
+        <div class="article-info">
+          <span class="category">Style</span>
+          <h3>Quisque velit nisi</h3>
+        </div>
+      </article>
+      <article class="medium">
+        <a class="article-image" href="#"></a>
+        <div class="article-info">
+          <span class="category">Travel</span>
+          <h3>Quisque velit nisi</h3>
+        </div>
+      </article>
+      <article class="small-1">
+        <a class="article-image" href="#"></a>
+        <div class="article-info">
+          <span class="category">Worldwide</span>
+          <h3>Quisque velit nisi</h3>
+        </div>
+      </article>
+      <article class="small-2">
+        <a class="article-image" href="#"></a>
+        <div class="article-info">
+          <span class="category">Worldwide</span>
+          <h3>Quisque velit nisi</h3>
+        </div>
+      </article>
     </section>
 
     <section id="news-mosiac">
