first draft media queries

--- a/code/index.html
+++ b/code/index.html
@@ -18,11 +18,17 @@
     <img class=logo src="Summer-Palm-Tree-1-2015060917.svg">
     <h1>Island Life</h1>
 
-    <nav class="Menu">
+    <nav>
       <a href="/Accomadation/">Accomadation</a>
       <a href="/Inspiration/">Inspiration</a>
       <a href="Contact us/">Contact us</a>
     </nav>
+
+    <div class="hamburger">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
 
   </header>
 
