Deleted comments. Added class to header for more precision.

--- a/code/index.html
+++ b/code/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="hamburger"> 
         <a href="./hamburger.html">
+          <!--divs to create three lines for hamburger menu-->
           <div></div>
           <div></div>
           <div></div>
