worked on header in tablet - not ready

--- a/code/index.html
+++ b/code/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Kalam&family=Kaushan+Script&family=Love+Ya+Like+A+Sister&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
 
   </head>
   <body>
@@ -29,14 +29,18 @@
       </h1>
 
 
-      <nav class="navbar">
-        <a class=navlink href="/html/">Home</a> |
-        <a class=navlink href="/css/">About</a> |
-        <a class=navlink href="/js/">Contact</a> |
-        <a class=navlink href="/python/">Contribute</a>
-      </nav>
+      <nav class="navlink1" href="/html/">Home</a> |
 
-      <!-- Some kind of logo and navbar -->
+
+      <nav class="navlink2" href="/css/">About</a> |
+
+
+      <nav class="navlink3" href="/js/">Contact</a> |
+
+
+      <nav class="navlink4" href="/python/">Contribute</a>
+      
+
     </header>
 
     <section class="big-news">
