add content, logo, images and text

--- a/code/index.html
+++ b/code/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="header">
     <!-- logo and navbar -->
-    <img class="logo" src="./logo.svg" alt="logo">
+    <img class="logo" src="./news.svg" alt="logo">
     <nav class="navigation-container">
       <div class="nav-item">Articles</div>
       <div class="nav-item">Magazine</div>
@@ -23,51 +23,56 @@
     <!-- big news section -->
     <section class="big-news-container">
       <div class="big-news-img">
-        <img class="img" src="img.jpg" alt="image">
+        <img class="img" src="./snake.jpg" alt="snake">
       </div>
       <div class="big-news-text">
-        <h1>En rubrik i stora bokstäver</h1>
-        <p>Hlacus sagittis, lobortis in at non, tempor. Orci eu, proin dui nibh et.
-          Facilisi ut ingit ullamcorper vivamus convallis mauris in viverra phasellus.
-          Sed sagittis, ut quis ullamcorper morbi gravida consequat vitae. Diam,
-          turpis non pretium sit eget adipiscing diam enim, ornare. Urna, ac neque
-          amet consequat sed vitae a. Tellus amet nulla in id ultricies orci, ultrices
-          pellentesque in. Duis porttitor consequat nunc velit, aliquam. Ultricies
-          augue fringilla vitae ut aenean.</p>
-        <button class="button">Läs mer</button>
+        <h1>Top 10 Species Discovered in 2020 Include a Harry Potter Snake and Desert-Dwelling Broccoli</h1>
+        <button class="button">Read more</button>
       </div>
     </section>
     <!-- recent news section -->
     <section class="recent-news-container">
       <div>
         <div class="recent-news-heading">
-          <h1>Most recent news</h1>
+          <h1>Recent news</h1>
         </div>
         <div class="news-card-container">
           <div class="news-card">
-            <img class="img" src="img.jpg" alt="">
-            <h2>En lite mindre rubrik</h2>
-            <p>text</p>
+            <img class="img" src="./energy.jpg" alt="">
+            <h2>More Renewable Energy Used in 2020 Than Fossil Fuels For the First Time in World’s 4th Largest Economy
+            </h2>
+            <p>World - Jan 18, 2021</p>
           </div>
           <div class="news-card">
-            <img class="img" src="img.jpg" alt="">
-            <h2>En lite mindre rubrik</h2>
-            <p>text</p>
+            <img class="img" src="./walking.jpg" alt="">
+            <h2>Just Go Walk: Studies Show Normal Walking Can Add Years to Your Life and Reduce Disease Symptoms</h2>
+            <p>Health - Jan 18, 2021</p>
           </div>
           <div class="news-card">
-            <img class="img" src="img.jpg" alt="">
-            <h2>En lite mindre rubrik</h2>
-            <p>text</p>
+            <img class="img" src="./turtle.jpg" alt="">
+            <h2>The Last Known Swinhoe’s Turtle on Earth Was Alone Until This Female Was Found – Researchers Hope for
+              Babies</h2>
+            <p>Animals - Jan 16, 2021</p>
           </div>
           <div class="news-card">
-            <img class="img" src="img.jpg" alt="">
-            <h2>En lite mindre rubrik</h2>
-            <p>text</p>
+            <img class="img" src="./irland.jpg" alt="">
+            <h2>This Could Be Your Dream Job: Thousands Apply to Be Caretakers on Remote Irish Island</h2>
+            <p>Leisure - Jan 15, 2021</p>
           </div>
         </div>
       </div>
     </section>
   </main>
+  <footer class="footer">
+    <div class="credit">
+      <p>Icons made by </p>
+      <a href="https://www.freepik.com" title="Freepik">Freepik</a>
+      <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+    </div>
+    <div class="author">
+      <p>Web design by Felicia Liabäck Löwstett 2021</p>
+    </div>
+  </footer>
 </body>
 
 </html>
