Added comment to clarify different sections in html and css

--- a/code/index.html
+++ b/code/index.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;800&family=Jacques+Francois+Shadow&display=swap" rel="stylesheet">
   </head>
   <body>
+
+    <!-- HEADER -->
+
     <header>
         <h1 class="logo">GOOD<br> NEWS<br> ONLY</h1>
       </div>
@@ -22,7 +25,9 @@
       </nav>
     </header>
 
+      <!-- MAIN BOX -->
     <div class="main-box">
+      <!-- BIG NEWS -->
         <section class="big-news">
         <img class="big-news-img" src="images/bignewsimg.jpg" alt="Crowd celebrating in the streets"/>
         <div class="big-news-text">
@@ -38,7 +43,7 @@
           <p>Read more</p></a>
         </div>
     </section>
-
+        <!-- NEWS GROUP -->
       <section class="news-group">
         <div class="news-item">
           <a href="#">
@@ -70,7 +75,7 @@
         </a>
         </div>
       </section>
-
+        <!-- INTERVIEW SECTION -->     
       <section class="interview">
         <a href="#">
         <h1 class="interview-headline">INTERVJU.</h1>
@@ -82,7 +87,7 @@
       </a>
       </section>
     </div>
-
+<!-- FOOTER -->   
     <footer>
       <small>Copywrite 2020 Siri Hemsley</small>
     </footer>
