fixat figure till mobildevice

--- a/test.html
+++ b/test.html
@@ -44,7 +44,7 @@
 
     <section class="big-news">
       <!-- The big news content -->
-      <!-- image --> <div class="inside-big pic"><img src=https://i.insider.com/5ffc2a42bde805001980c188 /> </div>
+      <div class="inside-big pic"><img src=https://i.insider.com/5ffc2a42bde805001980c188 /> </div>
       <div class="inside-big text1">
         <p>
           Sweden has rushed through legislation that will 
@@ -57,7 +57,7 @@
           the year but was approved by Sweden's parliament on Friday, 
           allows officials to close restaurants, shops, and public transport, 
           Euronews reported. It also introduces fines for people who break 
-          social distancing rules
+          social distancing rules....
           <br>
           <a href="https://www.businessinsider.com/sweden-passes-law-to-allow-closures-amid-high-death-toll-2021-1?r=US&IR=T" target="_blank"><b>Click to read more</b> </a>
         </p>
@@ -66,6 +66,19 @@
       <div class="inside-big text2">
         <p>Lorum Ipsum Lorum Ipsum... <a href="url"><b>Click to read more</b> </a></p>
 
+
+      </div> 
+
+      <div class="figure">
+        <figure>
+          <img src=https://i.insider.com/5ffc2a42bde805001980c188
+          alt="Trulli">
+          <figcaption onclick="window.open('https://www.businessinsider.com/sweden-passes-law-to-allow-closures-amid-high-death-toll-2021-1?r=US&IR=T')">
+            Sweden has passed a new law allowing coronavirus lockdown 
+            restrictions after its death toll reached a new high....
+            <b>Click to read more</b>
+        </figcaption>
+        </figure>
 
       </div>
     </section>
