--- a/code/index.html
+++ b/code/index.html
@@ -29,16 +29,16 @@
       </h1>
 
 
-      <nav class="navlink1" href="/html/">Home</a> |
+      <a class="navlink1" href="/html/">Home</a> |
 
 
-      <nav class="navlink2" href="/css/">About</a> |
+      <a class="navlink2" href="/css/">About</a> |
 
 
-      <nav class="navlink3" href="/js/">Contact</a> |
+      <a class="navlink3" href="/js/">Contact</a> |
 
 
-      <nav class="navlink4" href="/python/">Contribute</a>
+      <a class="navlink4" href="/python/">Friends</a>
       
 
     </header>
