added breakpoints for responsiveness

--- a/code/index.html
+++ b/code/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!--  <meta http-equiv="X-UA-Compatible" content="ie=edge">-->
     <title>News site</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
-
+<!-- should be 1. logo 2. site name 3. navbar -->
   <body>
     <header class="coreNavigation-top">    
       <nav class="navigation-container">
@@ -15,7 +15,7 @@
         <div class="nav-item">Today</div>
         <div class="nav-item">This week</div>
         <div class="nav-item">Month</div>
-        </nav>   <!-- Some kind of logo and navbar -->
+        </nav>  
         <div class="title-Neo"> 
         <h1>Neo news</h1>      
         </div>
@@ -26,22 +26,46 @@
     </header>
 
     <section class="big-news-container">
-     <!-- <h2>Latest from around the globe</h2>-->
       <div class="news-card">
       <img class="photo-bar" src="/img/fusion-medical-animation-rnr8D3FNUNY-unsplash.png" alt="image of Corona virus">
+     
+      <div class="text">
+      <p> 
+        <h3>Coronavirus vaccine: What are human challenge trials?</h3>
+        Volunteers are set to be deliberately infected with Covid-19 after the UK Government said it will set up human challenge trials to speed up the development of a vaccine.<br><br>
+        Find <a href="https://www.smithsonianmag.com/science-nature/brief-history-human-challenge-trials-180976556/">A Brief History of Human Challenge Trials</a> here. 
+  
+      </p>
+    </div>
+      </div>
+
+      <div class="news-card">
+      <img class="photo-bar" src="/img/bryan-walker-EiG8v8mZxrE-unsplash.png" alt="Image of Harris Gin bottle">
+      <div class="text">
+        <h2>She Did It</h2>
+        <p>Kamala Harris, becomes the first woman, the first Asian American, and the first Black American to be elected vice president.
+          <i>I can’t help but daydream about Harris someday stepping one level up to the presidency</i> says 
+          Jemele Hill a contributing writer at <a href="https://www.theatlantic.com/world/">The Atlantic</a>.
+        </p>
+      </div>
     </div>
       <div class="news-card">
-      <img src="/img/trump.png" alt="Image of Donald Trump">
+      <img class="photo-bar" src="/img/antidepressiv.png" alt="Image of antidepressiv">
     </div>
       <div class="news-card">
-      <img src="/img/antidepressiv.png" alt="Image of antidepressiv">
-    </div>
-      <div class="news-card">
-      <img src="/img/josue-michel-i9cTdRQIuUg-unsplash.png" alt="Image of person">
+      <img class="photo-bar" src="/img/josue-michel-i9cTdRQIuUg-unsplash.png" alt="Image of person">
     </div>
     </section>
 
-    <section class="">
+    <section class="more-news-container">
+      <div class="news-card">Another vital area of understanding is how flexbox makes no assumption about the writing mode of the document. In the past, CSS was heavily weighted towards horizontal and left-to-right writing modes. Modern layout methods encompass the range of writing modes and so we no longer assume that a line of text will start at the top left of a document and run towards the right hand side, with new lines appearing one under the other.
+
+        You can read more about the relationship between flexbox and the Writing Modes specification in a later article; however, the following description should help explain why we do not talk about left and right and top and bottom when we describe the direction that our flex items flow in.
+        
+        If the flex-direction is row and I am working in English, then the start edge of the main axis will be on the left, the end edge on the right.</div>
+      <div class="news-card">something here</div>
+      <div class="news-card">something here</div>
+      <div class="news-card">gdgdfgggfgd </div>
       <!-- The other news   **** MORE NEWS here **** -->
     </section>
 
