--- a/code/index.html
+++ b/code/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Xanh+Mono&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
-    <meta name=“viewport” content=“width=device-width, initial-scale=1.0”>
+    <meta charset="utf-8" name=“viewport” content=“width=device-width, initial-scale=1.0”>
     <!-- dont forget the meta tag for responsiveness -->
   </head>
 
