grid in small-news-section, all grid in tablet ready

--- a/code/index.html
+++ b/code/index.html
@@ -95,12 +95,12 @@
       
       <figure class="small-news">
         <img class="small-news" src="/images/striped-socks.jpg" alt="Striped Socks">
-        <figcaption class="figcaption">Striped Socks the Easy Way</figcaption>
+        <figcaption class="figcaption">Striped Socks the Easy Way &#8211; with Self-Striping Yarn</figcaption>
       </figure>
 
       <figure class="small-news">
         <img class="small-news" src="/images/Fimofun.jpg" alt="Fimo Clay Beads">
-        <figcaption class="figcaption">Fimo Clay Fun</figcaption>
+        <figcaption class="figcaption">Fimo Clay Fun &#8211; Make Your Own Beads</figcaption>
       </figure>
 
     </section>
