--- a/code/index.html
+++ b/code/index.html
@@ -10,98 +10,82 @@
   </head>
   <body>
     
-      <header>
+      <header class="header-general">
         <!-- Logo, hamburger menu and navbar -->
         <div class="header-phone">
-          <img src="./logo.svg" alt="Logo">
+          <img src="./Arctic-Logo.png" class="logo" alt="Arctic News">
           <div class="checkbox">
             <input type="checkbox" id="hamburger">
               <nav class="dropdown">
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Highlights</a></li>
-                    <li><a href="">News</a></li>
-                    <li><a href="">More</a></li>
+                <ul class="dropdown-list">
+                    <li><a href="" class="nav-link">Home</a></li>
+                    <li><a href="" class="nav-link">Highlights</a></li>
+                    <li><a href="" class="nav-link">News</a></li>
+                    <li><a href="" class="nav-link">More</a></li>
                 </ul>
               </nav>
-            <label for="hamburger">
-              <div></div>
-              <div></div>
-              <div></div>
+            <label class="label" for="hamburger">
+              <div class="hamburger-line"></div>
+              <div class="hamburger-line"></div>
+              <div class="hamburger-line"></div>
             </label>
           </div>
         </div>
         <div class= "header-desktop">
-          <img src="./logo.svg" alt="Logo">
+          <img src="./Arctic-Logo.png" class="logo" alt="Logo">
           <nav class="nav-desktop">
-            <a href="">Home</a> |
-            <a href="">Highlights</a> |
-            <a href="">News</a> |
-            <a href="">More</a> |
+            <a href="" class="nav-link">Home</a> |
+            <a href="" class="nav-link">Highlights</a> |
+            <a href="" class="nav-link">News</a> |
+            <a href="" class="nav-link">More</a> |
           </nav>
         </div>
         <div class="header-tablet">
           <nav class="nav-tablet">
-            <a href="">Home</a>
-            <a href="">Highlights</a>
-            <a href= ""> <img src="./logo.svg" alt="Logo"> </a>
-            <a href="">News</a>
-            <a href="">More</a> 
+            <a href="" class="nav-link">Home</a>
+            <a href="" class="nav-link">Highlights</a>
+            <img src="./Arctic-Logo.png" class="logo" alt="Logo">
+            <a href="" class="nav-link">News</a>
+            <a href="" class="nav-link">More</a> 
           </nav>
         </div>
       </header>
-      <section class="big-news"> <!-- The big news content -->
-        <section class="container">
-          <img src="./logo.svg" alt="Image decription">
-          <div>
-          <h2>Text here</h2>
-          <p>Here will be a short text about our news. Here will be a short text about our news. Here will be a short text about our news</p>
-          <a href="">Read more</a>
+      <section class="big-news">
+        <div class="container">
+          <img class="bignews-image" src="./melting_arctic.jpg" alt="Image decription">
+          <div class="bignews-text">
+          <h2 class="bignews-headline">2020: The hottest year in the Arctic </h2>
+          <p class="bignews-para1">Temperatures in the Arctic Circle hit an all-time record in June 2020. The Arctic is warming up faster than any other region in the world.</p>
+          <p class="bignews-para2">Since the mid-1980s, the Arctic has warmed at least twice as fast as the global average, reinforcing a long downward trend in summer Arctic sea ice extent which has repercussions on the climate in mid-latitude regions.
+          </p>
+          <p class="bignews-para2">Arctic sea-ice reached its annual minimum in September, as the second lowest in the 42-year-old satellite record. Arctic sea ice for July and October 2020 was the lowest on record. Sea-ice in the Laptev Sea has been exceptionally low through the spring, summer and autumn, and the Northern Sea Route was ice-free or close to ice free from July to October 2020.
+          </p>
+          <a class="read-more" href="">Read more</a>
           </div>
-        </section>
+        </div>
       </section>
 
       <section class="ordinary-news"> <!-- The other news  -->
-        <section class="container">
+        <div class="container">
           <div class="news">
-            <a href="">
-              <div class="each-news">
-                <img src="./logo.svg" alt="">
-                <div>
-                  <h3>Headline text</h3>
-                  <p>Here will be a short text about our news. Here will be a short text about our news. </p>
-                </div>
-              </div>  
+            <a href="" class="each-news">
+              <img src="./arctic_city.jpg" class="ordinarynews-image" alt="Arctic city">
+              <h3 class="ordinarynews-headline">Climate change severely affects Arctic communities</h3>
             </a>
-            <a href="">
-              <div class="each-news">
-                <img src="./logo.svg" alt="">
-                <div>
-                  <h3>Headline text</h3>
-                  <p>Here will be a short text about our news. Here will be a short text about our news. </p>
-                </div>
-              </div>  
+            <a href="" class="each-news">
+              <img src="./arctic_shipping.jpg" class="ordinarynews-image" alt="Icebreaker">
+              <h3 class="ordinarynews-headline">As the ice melts the shipping in the Arctic gets momentum</h3> 
             </a>
-            <a href="">
-              <div class="each-news">
-                <img src="./logo.svg" alt="">
-                <div>
-                  <h3>Headline text</h3>
-                  <p>Here will be a short text about our news. Here will be a short text about our news. </p>
-                </div>
-              </div>  
+            <a href="" class="each-news">
+              <img src="./northern_lights.jpg" class="ordinarynews-image" alt="Northern lights">
+              <h3 class="ordinarynews-headline">Arctic tourism hindered by COVID-19: is it good or bad?</h3>      
             </a>
-            <a href="">
-              <div class="each-news">
-                <img src="./logo.svg" alt="">
-                <div>
-                  <h3>Headline text</h3>
-                  <p>Here will be a short text about our news. Here will be a short text about our news. </p>
-                </div>
-              </div>  
+            <a href="" class="each-news">
+              <img src="./polar_bears.jpg" class="ordinarynews-image" alt="Polar Bears">
+              <h3 class="ordinarynews-headline">Polar bears could be lost by 2100, study predicts</h3>  
             </a>
           </div>
-        </section>
+        </div>
       </section>
     <footer>
       <div class="about-us">
