add content to podcast section, restructure css, tweak typography

--- a/code/index.html
+++ b/code/index.html
@@ -33,7 +33,7 @@
       </div>
     </header>
     <nav>
-      <div class="divider nav"></div>
+      <div class="divider no-marg"></div>
       <ul>
         <li>JavaScript</li>
         <li>Responsive</li>
@@ -49,12 +49,30 @@
       </ul>
     </nav>
     <main>
-      <div class="divider nav bottom"></div>
+      <div class="divider no-marg"></div>
       <section class="podcasts">
         <div class="container">
-          <div class="item">Gonna add some content here,</div>
-          <div class="item">here</div>
-          <div class="item">and here</div>
+          <div class="item">
+            <img src="./resources/mathias-konrath-BBjW2qnIixc-unsplash.jpg" alt="">
+            <div class="text">
+              <h3>Listen to 'The Daily'</h3> 
+              <p>“Restoring the first brick of dignity”: Biden supporters on his inauguration.</p> 
+            </div>
+          </div>
+          <div class="item">
+            <img src="./resources/cristian-newman-l9I93gZKTG4-unsplash.jpg" alt="">
+            <div class="text">
+              <h3>Listen to 'The Daily'</h3> 
+              <p>“Restoring the first brick of dignity”: Biden supporters on his inauguration.</p> 
+            </div>
+          </div>  
+          <div class="item">
+            <img src="./resources/cristian-newman-A6O7pgc7vHg-unsplash.jpg" alt="">
+            <div class="text">
+              <h3>Listen to 'The Daily'</h3> 
+              <p>“Restoring the first brick of dignity”: Biden supporters on his inauguration.</p> 
+            </div>
+          </div>
         </div>
         <div class="divider"></div>
       </section>
@@ -76,8 +94,12 @@
           <p>We have around 60 junior frontend developers that have gone through our proven training program. At first glance, they might not fit your standard profile. However, we know that you will not only be wowed by their tech skills, they will deliver and bring new perspectives to your team. Previous students are currently working as frontend developers at companies like Dagens Nyheter, H&M, SeenThis, Comprend, Will&Skill, Mojang, TUI, Instabox and more.</p>
         </div>
       </section>
+      <div class="divider"></div>
       <section class="full-length-news">
-        <div class="text">Some loooong content is gonna go here</div>
+        <div class="text">
+          <h1>A kitten is a juvenile cat. After being born, kittens display primary altriciality and are totally dependent on their mother for survival. </h1>
+          <p>They do not normally open their eyes until after seven to ten days. After about two weeks, kittens quickly develop and begin to explore the world outside the nest. After a further three to four weeks, they begin to eat solid food and grow adult teeth. Domestic kittens are highly social animals and usually enjoy human companionship.</p>
+        </div>
       </section>
       <div class="divider"></div>
       <section class="small-news">
