Updated footer styling

--- a/code/index.html
+++ b/code/index.html
@@ -11,12 +11,12 @@
   <body>
 
     <header>
-        <img class="logo" src="./star.svg" alt="Alva logo"> <!-- add img src -->
+        <img class="logo" src="./star.svg" alt="Alva logo"> 
         <h1>ALVA</h1>
         <nav> 
-            <a href="#">About</a>
-            <a href="#">Archive</a>
-            <a href="#">Contact</a>
+          <a href="#">About</a>
+          <a href="#">Archive</a>
+          <a href="#">Contact</a>
         </nav>
         <div class="hamburger">
           <div></div>
@@ -31,8 +31,8 @@
     </header>
 
     <section class="big-news">
-      <section class="big-news-container">
-        <img class="responsive-image" src="alva-wet.jpg" alt="Alva getting wet"> <!-- set alt to the image once image src is in place -->
+      <section class="container">
+        <img class="responsive-image" src="alva-wet.jpg" alt="Alva getting wet"> 
         <div class="big-news-text">
           <h2>Looking back</h2>
           <p>2020 - Year of the dog</p>
@@ -41,60 +41,84 @@
     </section>
 
     <section class="other-news">
-      <section class="other-news-container">
-        <img class="other-news-image" src="#" alt=""> <!-- set alt to the image once image src is in place -->
-        <div class="other-news-text">
+      <section class="container">
+          <img class="responsive-image" src="./alva-dot.jpg" alt="Alva in the woods"> 
+          <div class="other-news-text">
+            <h4>Casual stroll in the woods</h4>
+          </div>
       </section>
-      <section class="other-news-container">
-        <img class="other-news-image" src="#" alt=""> <!-- set alt to the image once image src is in place -->
-        <div class="other-news-text">
+      <section class="container">
+          <img class="responsive-image" src="./alva-field.jpg" alt="Alva on a field"> 
+          <div class="other-news-text">
+            <h4>Endless possibilities</h4>
+          </div>
       </section>
-      <section class="other-news-container">
-        <img class="other-news-image" src="#" alt=""> <!-- set alt to the image once image src is in place -->
-        <div class="other-news-text">
+      <section class="container">
+          <img class="responsive-image" src="./alva-flamingo.jpg" alt="Alva with Flamingo toy"> 
+          <div class="other-news-text">
+            <h4>"Play with me, please!"</h4>
+          </div>
       </section>
-      <section class="other-news-container">
-        <img class="other-news-image" src="#" alt=""> <!-- set alt to the image once image src is in place -->
-        <div class="other-news-text">
+      <section class="container">
+          <img class="responsive-image" src="./alva-grass.jpg" alt="Alva lying in the grass"> 
+          <div class="other-news-text">
+            <h4>Nothing beats the feeling of grass</h4>
+          </div>
       </section>
-      <section class="other-news-container">
-        <img class="other-news-image" src="#" alt=""> <!-- set alt to the image once image src is in place -->
-        <div class="other-news-text">
+      <section class="container">
+          <img class="responsive-image" src="./alva-tongue-out.jpg" alt="Alva with her tongue out"> 
+          <div class="other-news-text">
+            <h4>Life's good</h4>
+          </div>
       </section>
-      <section class="other-news-container">
-        <img class="other-news-image" src="#" alt=""> <!-- set alt to the image once image src is in place -->
-        <div class="other-news-text">
+      <section class="container">
+          <img class="responsive-image" src="./alva-woods.jpg" alt="Alva in the woods"> 
+          <div class="other-news-text">
+            <h4>That time I almost choked on a stick</h4>
+          </div>
       </section>
-      <section class="other-news-container">
-        <img class="other-news-image" src="#" alt=""> <!-- set alt to the image once image src is in place -->
-        <div class="other-news-text">
+      <section class="container">
+          <img class="responsive-image" src="./alva-snowball.jpg" alt="Alva on a big snowball"> 
+          <div class="other-news-text">
+            <h4>How I became the Queen of everything</h4>
+          </div>
       </section>
-      <section class="other-news-container">
-        <img class="other-news-image" src="#" alt=""> <!-- set alt to the image once image src is in place -->
-        <div class="other-news-text">
+      <section class="container">
+          <img class="responsive-image" src="./alva-sofa.jpg" alt="Alva on the sofa"> 
+          <div class="other-news-text">
+            <h4>Lazy days</h4>
+          </div>
       </section>
     </section>
 
     <footer>
-      <div class="contact-info">
-        <a href="#">About</a> 
-        <a href="#">Archive</a>
-        <a href="#">Contact</a>
-        <a href="#">
-          <img src="./facebook.svg" alt="Facebook"> 
-          Facebook
-        </a>
-        <a href="#">
-          <img src="./instagram.svg" alt="Instagram"> 
-          Instagram 
-        </a>
-        <a href="#">
-          <img src="./youtube.svg" alt="Youtube"> 
-          Youtube 
-        </a>
-        <a href="mailto:someone@example.com">Email: info@alva.se</a>
+      <div class="container-footer">
+        <div class="container-contact-info">
+          <a href="#">About</a> 
+          <a href="#">Archive</a>
+          <a href="#">Contact</a>
+        </div>
+        <!-- <div class="container-channels"> -->
+        <div class="container-social-media">
+          <a href="#">
+            <img src="./facebook.svg" alt="Facebook"> 
+            Facebook
+          </a>
+          <a href="#">
+            <img src="./instagram.svg" alt="Instagram"> 
+            Instagram 
+          </a>
+          <a href="#">
+            <img src="./youtube.svg" alt="Youtube"> 
+            Youtube 
+          </a>
+        </div>
+          <!-- <div class="container-email">
+              Email: 
+              <a href="mailto:someone@example.com">info@alva.se</a>
+          </div> -->
+        <!-- </div> -->
       </div>
     </footer>
-
   </body>
 </html>
