change color icon

--- a/code/index.html
+++ b/code/index.html
@@ -17,7 +17,7 @@
       <!-- Some kind of logo and navbar -->
       <div class="flex-container">
         <div class="logo">    
-          <img src="KN_logo.svg" alt="logotype KnittyNews" />
+          <img src="./KN_logo.svg" alt="logotype KnittyNews" />
         </div>
 
         <div class="nav">
