changed the h1 used for logo to a logo I made in inkscape. also made and added a simplified logo for mobile versions.

--- a/code/index.html
+++ b/code/index.html
@@ -30,8 +30,8 @@
         </label>
     </nav>
     <div class="meteor"></div>
-    <h1 class="logo"> SPACE NEWS </h1>
-    <h1 class="small-logo"> SN </h1>
+    <div class="logo"><img src="../pictures/logo_space.svg"></div>
+    <div class="logo-simple"><img src="../pictures/logo_space_simple.svg"></div>
   </header>
 
   <section class="big-news">
