--- a/code/signup.html
+++ b/code/signup.html
@@ -29,8 +29,8 @@
         </div>
     </div>
 </nav>
-<h1 class="logo">SPACE NEWS</h1>
-<h1 class="small-logo">SN</h1>
+<div class="logo"><img src="../pictures/logo_space.svg"></div>
+<div class="logo-simple"><img src="../pictures/logo_space_simple.svg"></div>
 </header>
 
 <section class="signup">
