Added:  effect on cards and footer

--- a/code/index.html
+++ b/code/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Push 4: Project 2: Succulent world</title>
+    <title>Push 5: Project 2: Succulent world</title>
     <link rel="stylesheet" href="./style.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- dont forget the meta tag for responsiveness -->
@@ -130,6 +130,20 @@
       </div>  
     </section>
 
+    </section>
     </main>
+    <footer>
+      <div class=footer>
+        <p class="footer-text">
+       Magazine site * Technigo Bootcamp * Daniela Zacarías 
+        </p>
+        <div class="social-media">
+          <a href="https://www.linkedin.com/in/danielazacarias/">
+            <i class="fab fa-linkedin"></i>
+          </a>
+          <i class="fab fa-github"></i>
+        </div> 
+      </div>
+    </footer>
   </body>
 </html>
