Added: media queries for tablet view (2 columns)

--- a/code/index.html
+++ b/code/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Push 5: Project 2: Succulent world</title>
+    <title>Push 6: Project 2: Succulent world</title>
     <link rel="stylesheet" href="./style.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- dont forget the meta tag for responsiveness -->
+
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <!-- Header: logo and navbar -->
       <nav>
         <ul>
           <li class="logo">Succulent World</li>
@@ -23,7 +23,9 @@
     </header>
     <main>
     <section class="cards-container">
-      <!--the big news content-->
+
+      <!--the main article -->
+
       <div class="main-article">
         <a href="#">
           <div class="main-article-image">
@@ -44,9 +46,9 @@
     </div> 
 
     <section class="other-articles">
-      <!-- The other news  -->
-      <div class="grid-container">
-         
+      <!-- The other articles  -->
+
+      <div class="grid-container">  
         <div class="card">
           <div class="article-1">
             <a href="#">
@@ -129,7 +131,6 @@
         </div>
       </div>  
     </section>
-
     </section>
     </main>
     <footer>
