Added: media queries for desk view (4 columns) and added social media icons in the footer

--- a/code/index.html
+++ b/code/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Push 6: Project 2: Succulent world</title>
+    <title>Push 7: Project 2: Succulent world</title>
     <link rel="stylesheet" href="./style.css"/>
+    <link rel="icon" href="./img/icons8-succulent.png" type="image/gif" sizes="16x16">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   </head>
@@ -136,13 +137,15 @@
     <footer>
       <div class=footer>
         <p class="footer-text">
-       Magazine site * Technigo Bootcamp * Daniela Zacarías 
+       Magazine site <span>&#183;</span> Technigo Bootcamp <span>&#183;</span> Daniela Zacarías 
         </p>
         <div class="social-media">
-          <a href="https://www.linkedin.com/in/danielazacarias/">
-            <i class="fab fa-linkedin"></i>
+          <a href="https://www.linkedin.com/in/danielazacarias/" target="_blank">
+          <img src="./img/icons8-linkedin-white.png" alt "LinkedIn">  
           </a>
-          <i class="fab fa-github"></i>
+          <a href="https://www.instagram.com/nini.nz/"target="_blank">
+            <img src="./img/icons8-instagram-white.png" alt "Instagram">  
+            </a>    
         </div> 
       </div>
     </footer>
