New site, new design, because way too messy code before

--- a/code/index.html
+++ b/code/index.html
@@ -1,81 +1,76 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-  <meta charset="utf-8" />
-  <title>Project 2: The News Site</title>
-  <link rel="stylesheet" href="./style.css" />
-  <!-- dont forget the meta tag for responsiveness -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title> Project 2: The News site</title>
 </head>
 
 <body>
-  <header>
-    <!-- Some kind of logo and navbar -->
-    <div class="img-container-logo">
-      <img src="./assets/Circle-Forset-Night-bw (1).png" width="180px" height="180px">
+
+  <header class="header-landing-page">
+    <div class="header-logo-container">
+      <img class="header-logo" src="./assets/Circle-Forset-Night-bw (1).png" alt="Site logo">
     </div>
-    <h2 class="site-name">HIKING</h2>
+    <h1 class="site-title">HIKING</h1>
     <nav class="navigation-container">
-      <div class="navigation-item">One</div>
-      <div class="navigation-item">Two</div>
-      <div class="navigation-item">Three</div>
-      <div class="navigation-item">Four</div>
+      <div class="navigation-item">
+        <a class="nav-link" href="https://google.com">One</a>
+      </div>
+      <div class="navigation-item">
+        <a class="nav-link" href="https://google.com">Two</a>
+      </div>
+      <div class="navigation-item">
+        <a class="nav-link" href="https://google.com">Three</a>
+      </div>
+      <div class="navigation-item">
+        <a class="nav-link" href="https://google.com">Four</a>
+      </div>
     </nav>
   </header>
 
+  <section class="big-news">
+    <img class="big-news-img" src="./assets/next-trip-img.png" alt="Picture of a mountain" width="450px">
+    <div class="big-news-text">
+      <h3>Next Trip</h3><br>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+        aliquip ex ea commodo consequat.
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+        culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+  </section>
 
-  <div class="desktop-box">
-
-
-    <section class="big-news">
-      <!-- The big news content -->
-      <div class="big-news-img">
-        <img src="./assets/next-trip-img.png" width="450px">
-      </div>
-      <div class="big-news-text">
-        <h3>Next Trip</h3><br>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-          fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-    </section>
-
-
-    <section class="small-news">
-      <!-- Small news -->
-      <a href="#">
-        <img src="./logo.svg" alt="Photo of a">
-        <p>Some image text</p>
-
-      </a>
-      <a href="#">
-        <img src="./logo.svg" alt="Photo of a">
-        <p>Some image text</p>
-      </a>
-      <a href="#">
-        <img src="./logo.svg" alt="Photo of a">
-        <p>Some image text</p>
-      </a>
-      <a href="#">
-        <img src="./logo.svg" alt="Photo of a">
-        <p>Some image text</p>
-      </a>
-      <a href="#">
-        <img src="./logo.svg" alt="Photo of a">
-        <p>Some image text</p>
-      </a>
-      <a href="#">
-        <img src="./logo.svg" alt="Photo of a">
-        <p>Some image text</p>
-      </a>
-    </section>
-  </div>
-
+  <section class="small-news">
+    <a href="#">
+      <img src="./assets/logo.svg" alt="Photo of a">
+      <p>Some image text</p>
+    </a>
+    <a href="#">
+      <img src="./assets/logo.svg" alt="Photo of a">
+      <p>Some image text</p>
+    </a>
+    <a href="#">
+      <img src="./assets/logo.svg" alt="Photo of a">
+      <p>Some image text</p>
+    </a>
+    <a href="#">
+      <img src="./assets/logo.svg" alt="Photo of a">
+      <p>Some image text</p>
+    </a>
+    <a href="#">
+      <img src="./assets/logo.svg" alt="Photo of a">
+      <p>Some image text</p>
+    </a>
+    <a href="#">
+      <img src="./assets/logo.svg" alt="Photo of a">
+      <p>Some image text</p>
+    </a>
+  </section>
 
 </body>
 
