Added extra image and article html page. Added a fourth nav bar element to the header with connecting html page to it.

--- a/code/index.html
+++ b/code/index.html
@@ -16,12 +16,13 @@
           <div></div>
         </a>
       </div>
-      <img src="./photos/dentnews.png" alt="Dentnews logo">
-      <nav class="navigation-container">
-        <a href="./article1.html">BREAKING NEWS</a> 
-        <a href="./about.html">ABOUT US</a> 
-        <a href="./contact.html">CONTACT</a> 
-      </nav>
+        <img src="./photos/dentnews.png" alt="Dentnews logo">
+        <nav class="navigation-container">
+          <a href="./article1.html">BREAKING NEWS</a> 
+          <a href="./about.html">ABOUT US</a> 
+          <a href="./subscribe.html">SUBSCRIBE</a>
+          <a href="./contact.html">CONTACT</a> 
+        </nav>
     </header>
 
     <section class="big-news">
@@ -108,6 +109,17 @@
           </div>
         </a>
       </div>
+
+      <div class="news">
+        <a href="./article9.html">
+          <img src="./photos/intraoralscanner.jpg" alt="Picture of an intraoral scanner">
+          <div>
+            <h3>Intraoral scanners</h3>
+            <p>How to get started with intraoral scanners.</p>
+          </div>
+        </a>
+      </div>
+
     </section>
 
     <footer>
