fixed up responsive navigation bar

--- a/code/index.html
+++ b/code/index.html
@@ -19,11 +19,12 @@
     <!-- mobile navigation bar-->
     
         <div class="icon fa fa-bars">
-          <div class="topic-bar"><a href="#" class="links">home</a></div>
-          <div class="topic-bar"><a href="#" class="links">world</a></div>
-          <div class="topic-bar"><a href="#" class="links">politics</a></div>
-          <div class="topic-bar"><a href="#" class="links">sports</a></div>
+          <div class="mobile-dropdown-content"><a href="#" class="links">home</a></div>
+          <div class="mobile-dropdown-content"><a href="#" class="links">world</a></div>
+          <div class="mobile-dropdown-content"><a href="#" class="links">politics</a></div>
+          <div class="mobile-dropdown-content"><a href="#" class="links">sports</a></div>
         </div>
+        
     <!-- tablet and computer navigation bar -->
 
         <div class="topic"><a href="#" class="links">home</a></div>
