--- a/code/index.html
+++ b/code/index.html
@@ -163,7 +163,7 @@
     </main>
     <div class="divider"></div>
     <!-- <div class="divider"></div> -->
-    <footer>This is the footer!</footer>
+    <footer>Hi you've reached the footer</footer>
     <!-- <script src="./script.js"></script> -->
   </body>
 
